--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "^8.5.2",
+    "groq-sdk": "^0.15.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.475.0",
     "next": "14.2.5",
@@ -71,7 +72,7 @@
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.66.0",
-    "@types/node": "^20",
+    "@types/node": "^20.17.19",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
